deploy/k8s/infrastructure/envoy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kdvmanager-ingress
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-hostname: "kdvmanager.nl"
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
    service.beta.kubernetes.io/do-loadbalancer-tls-passthrough: "true"
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  rules:
  - host: "kdvmanager.nl"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: marketing
            port:
              number: 80
  - host: "app.kdvmanager.nl"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port:
              number: 80
  - host: "api.kdvmanager.nl"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: envoy
            port:
              number: 80
  tls:
  - hosts:
    - kdvmanager.nl
    - app.kdvmanager.nl
    - api.kdvmanager.nl
    secretName: kdvmanager-nl-tls
